SyntacticAnalyzer/tests/fail/atributo-ctor-metodo01.java
class foo {

	var int n1;
	
	ctor(int n2) {
	}
	
	static Objeto method1 (char c1, char c2, int n1)
	var int n2,n3,n4;
	var char c1,c2;
	var String cadena;
	var Objeto o1;
	{
	}

	method2(int n5, char c3){
	}
	
	// falta ;
	var char caracter
	
	static void method3(){
	}
	
	dynamic Objeto method3()
	{
	}
	
}
